--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .logo {
   height: 6em;
@@ -42,13 +42,13 @@
 }
 
 html, body, #root {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   padding: 0;
 }
 
 .page-wrap {
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
